# gmal

./: .gitignore  README.md  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/api/: config.py  deps.py  main.py  schemas.py
backend/api/routes/: admin_error_register.py  admin_instruments.py  admin_metrics.py  analyses.py  exports.py  health.py  invites.py  me.py  memos.py  profiles.py  roles.py  tenants.py  workspaces.py
backend/db/: base.py  session.py
backend/db/migrations/: env.py
backend/db/models/: __init__.py  analysis.py  enums.py  memo.py  ops.py  profile.py  regulatory.py  tenancy.py
backend/engine/: __init__.py
backend/engine/completeness/: __init__.py  calculator.py  catalog.py
backend/engine/confidence/: __init__.py  rubric.py
backend/engine/diff/: __init__.py  assumptions.py  base.py
backend/engine/impact/: __init__.py  base.py  calculator.py  phasing.py  present_value.py  range.py  scenarios.py
backend/engine/predicates/: __init__.py  base.py  dsl.py  evaluate.py
backend/engine/rationale/: __init__.py  builder.py
backend/jobs/: __init__.py  app.py  sources.py
backend/scripts/: ensure_extensions.py  grant_staff.py  populate_sample_instruments.py
backend/services/: analyses.py  audit.py  entity_profile.py  error_register.py  instrument_onboarding.py  invites.py  memo.py  metrics.py  metrics_report.py  onboarding_metrics.py  predicate_testrunner.py  prose_numerals.py  review.py  scenarios.py
backend/services/ai/: anthropic_calls.py
backend/services/auth/: __init__.py  clerk.py
backend/tests/: conftest.py
(+250 files in other folders)
