[tool.poetry]
name = "provision-backend"
version = "0.1.0"
description = "Provision backend: API, deterministic engine, services, and jobs."
authors = ["Provision Engineering"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.6.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
procrastinate = {extras = ["psycopg"], version = "^2.15.0"}
pgvector = "^0.3.6"
pyjwt = {version = "^2.9.0", extras = ["crypto"]}
httpx = "^0.27.2"
anthropic = "^0.40.0"
playwright = "^1.48.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
hypothesis = "^6.122.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"db/migrations/versions/*.py" = ["E501"]
"api/deps.py" = ["B008"]
"api/routes/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
